<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_home_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/home_team_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/card_background_drawable"
            android:contentDescription="@string/home_team_image"
            android:padding="10dp"
            app:srcCompat="@color/colorPrimary" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_away_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/away_team_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/card_background_drawable"
            android:contentDescription="@string/away_team_image"
            android:padding="10dp"
            app:srcCompat="@color/colorPrimary" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/home_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/home_team_name"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView_home_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/away_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/away_team_name"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_away_team" />

    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/vs"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView_away_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_home_team" />

</androidx.constraintlayout.widget.ConstraintLayout>