<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_team_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/team_info_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/home_team_image"
            android:padding="10dp"
            app:srcCompat="@color/colorPrimary" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/team_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/home_team_name"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/cardView_team_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/team_info_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_info_name" />

    <TextView
        android:id="@+id/team_info_halftime_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_info_score" />

    <Button
        android:id="@+id/button_list_of_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/list_of_team_players"
        android:textColor="@color/colorBlack"
        android:background="@drawable/button_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_info_halftime_score" />

    <TextView
        android:id="@+id/team_stats_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_stats_throughout_the_match"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_list_of_team_stats"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list_of_team_stats"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>